bynkc/tests/fixtures/positive/132_assert_statement_regression/src/commerce/money.bynk
commons commerce.money {
  type Money = Int where NonNegative

  fn Money.fromMinorUnits(n: Int) -> Result[Money, ValidationError] {
    Money.of(n)
  }
}
