bynkc/tests/fixtures/negative/21_question_error_mismatch/input.bynk
commons test {
  type Reps = Int where InRange(1, 100)

  fn f(n: Int) -> Result[Int, String] {
    let r = Reps.of(n)?
    Ok(r)
  }
}
